--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -76,7 +76,7 @@
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
               <select id="codeSystemSearch" class="w-20" formControlName="codeSystemName">
-                <option value="">ALL</option value="">
+                <option value="">ALL</option>
                 <option *ngFor="let CODE_SYSTEM_NAME of CODE_SYSTEM_NAMES">{{CODE_SYSTEM_NAME}}</option>
               </select>
             </div>
