--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -140,7 +140,7 @@
         <ng-container matColumnDef="requestTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
-              <label for="requestTimeFrom" class="m-2" mat-sort-header disableClear>Request Time</label>
+              <label for="requestRange" class="m-2" mat-sort-header disableClear>Request Time</label>
             </div>
           </th>
           <td mat-cell
@@ -149,10 +149,15 @@
         <ng-container matColumnDef="requestTime-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <input id="requestTimeFrom" matInput class="w-30" formControlName="requestTimeFrom" type="date"
-                     [max]="searchCriteria.get('requestTimeTo')?.getRawValue()">
-              <input id="requestTimeTo" matInput class="w-30" formControlName="requestTimeTo" type="date"
-                     [min]="searchCriteria.get('requestTimeFrom')?.getRawValue()">
+              <mat-form-field appearance="outline" id="requestRange">
+                <mat-label>Enter a date range</mat-label>
+                <mat-date-range-input [rangePicker]="requestRangePicker">
+                  <input matStartDate formControlName="requestTimeFrom" placeholder="Start date">
+                  <input matEndDate formControlName="requestTimeTo" placeholder="End date">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matIconSuffix [for]="requestRangePicker"></mat-datepicker-toggle>
+                <mat-date-range-picker #requestRangePicker></mat-date-range-picker>
+              </mat-form-field>
             </div>
           </th>
         </ng-container>
