--- a/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
+++ b/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="searchCriteria">
   <fieldset>
     <legend>QA Notes</legend>
-    <table class="mat-elevation-z8 my-3" mat-table [dataSource]="dataSource()" matSort (matSortChange)="handleSortEvent()">
+    <table class="mat-elevation-z8 my-3" mat-table [dataSource]="dataSource()" matSort>
       <ng-container matColumnDef="activityId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Activity ID</th>
         <td mat-cell *matCellDef="let activity">{{activity.activityId | date: 'YYYY-MM-dd'}}</td>
@@ -30,11 +30,11 @@
           </div>
         </th>
       </ng-container>
-      <ng-container matColumnDef="notes">
+      <ng-container matColumnDef="note">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Note</th>
         <td mat-cell *matCellDef="let activity">{{activity.note}}</td>
       </ng-container>
-      <ng-container matColumnDef="notes-search">
+      <ng-container matColumnDef="note-search">
         <th mat-header-cell *matHeaderCellDef>
           <input id="noteInput" class="w-20" formControlName="note">
         </th>
