--- a/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
+++ b/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
@@ -4,7 +4,7 @@
     <table class="mat-elevation-z8 my-3" mat-table [dataSource]="dataSource()" matSort>
       <ng-container matColumnDef="activityId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Activity ID</th>
-        <td mat-cell *matCellDef="let activity">{{activity.id | date: 'YYYY-MM-dd'}}</td>
+        <td mat-cell *matCellDef="let activity">{{activity.activityId | date: 'YYYY-MM-dd'}}</td>
       </ng-container>
       <ng-container matColumnDef="activityId-search">
         <th mat-header-cell *matHeaderCellDef>
@@ -15,7 +15,7 @@
       <ng-container matColumnDef="hashtags">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Hashtags</th>
         <td mat-cell *matCellDef="let activity">
-          <div *ngFor="let tag of activity.notes[0].hashtags">
+          <div *ngFor="let tag of activity.hashtags">
             #{{tag}}
           </div>
         </td>
@@ -30,18 +30,18 @@
           </div>
         </th>
       </ng-container>
-      <ng-container matColumnDef="notes">
+      <ng-container matColumnDef="note">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Note</th>
-        <td mat-cell *matCellDef="let activity">{{activity.notes[0].notes}}</td>
+        <td mat-cell *matCellDef="let activity">{{activity.note}}</td>
       </ng-container>
-      <ng-container matColumnDef="notes-search">
+      <ng-container matColumnDef="note-search">
         <th mat-header-cell *matHeaderCellDef>
           <input id="noteInput" class="w-20" formControlName="note">
         </th>
       </ng-container>
       <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>User</th>
-        <td mat-cell *matCellDef="let activity">{{activity.notes[0].createdBy}}</td>
+        <td mat-cell *matCellDef="let activity">{{activity.createdBy}}</td>
       </ng-container>
       <ng-container matColumnDef="createdBy-search">
         <th mat-header-cell *matHeaderCellDef>
@@ -56,7 +56,7 @@
 
       <ng-container matColumnDef="createdTime">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Creation Time</th>
-        <td mat-cell *matCellDef="let activity">{{activity.notes[0].createdTime | date: 'YYYY-MM-dd HH:mm a'}}</td>
+        <td mat-cell *matCellDef="let activity">{{activity.createdTime | date: 'YYYY-MM-dd HH:mm a'}}</td>
       </ng-container>
       <ng-container matColumnDef="createdTime-search">
         <th mat-header-cell *matHeaderCellDef>
