Redo Load Messages and Activities

--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -213,8 +213,8 @@
                   </ng-container>
                   <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
                   <app-load-request-activity [requestId]="row.requestId"
-                                             [loadRequestActivities]="row.loadRequestActivities"></app-load-request-activity>
-                  <app-load-request-message [loadRequestMessages]="row.loadRequestMessages"></app-load-request-message>
+                                             [loadRequestActivities]="row.loadComponents"></app-load-request-activity>
+                  <app-load-request-message [loadRequestActivities]="row.loadComponents"></app-load-request-message>
                 </fieldset>
               </div>
             </div>
