--- a/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
+++ b/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
@@ -12,17 +12,17 @@
 
     <ng-container matColumnDef="startTime">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Start time</th>
-      <td mat-cell *matCellDef="let element"> {{element.startTime}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.startTime | date:'yyyy/MM/dd hh:mma'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="endTime">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> End Time</th>
-      <td mat-cell *matCellDef="let element"> {{element.endTime}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.endTime | date:'yyyy/MM/dd hh:mma'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="duration">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration</th>
-      <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
+      <td mat-cell *matCellDef="let element"> {{duration(element)}} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
@@ -30,19 +30,9 @@
       <td mat-cell *matCellDef="let element"> {{element.status}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="messageType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Message Type</th>
-      <td mat-cell *matCellDef="let element"> {{element.messageType}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="message">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Message</th>
-      <td mat-cell *matCellDef="let element"> {{element.message}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="creationTime">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Time</th>
-      <td mat-cell *matCellDef="let element"> {{element.creationTime}} </td>
+    <ng-container matColumnDef="nbOfMessages">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header># of Messages</th>
+      <td mat-cell *matCellDef="let element"> {{element.infos.length + element.warnings.length + element.errors.length}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
