--- a/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
+++ b/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="duration">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration</th>
-      <td mat-cell *matCellDef="let element"> {{duration(element)}} </td>
+      <td mat-cell *matCellDef="let element"> {{duration(element) | date: 'hh:mm:ss'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
