--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -214,7 +214,8 @@
                   <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
                   <app-load-request-activity [requestId]="row.requestId"
                                              [loadRequestActivities]="row.loadComponents"></app-load-request-activity>
-                  <app-load-request-message [loadRequestActivities]="row.loadComponents"></app-load-request-message>
+                  <app-load-request-message
+                    [loadRequestActivities]="row.loadComponents"></app-load-request-message>
                 </fieldset>
               </div>
             </div>
