--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -207,12 +207,12 @@
                     <button mat-fab extended (click)="openEditDialog(row)">
                       Edit
                     </button>
-                    <button mat-fab extended (click)="openCancelDialog(row.requestId)">
+                    <button mat-fab extended (click)="openCancelDialog(row.opRequestSeq)">
                       Cancel
                     </button>
                   </ng-container>
                   <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
-                  <app-load-request-activity [requestId]="row.requestId"
+                  <app-load-request-activity [requestId]="row.opRequestSeq"
                                              [loadRequestActivities]="row.loadComponents"></app-load-request-activity>
                   <app-load-request-message
                     [loadRequestActivities]="row.loadComponents"></app-load-request-message>
