--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -77,7 +77,8 @@
             <div class="flex flex-col m-2">
               <select id="codeSystemSearch" class="w-20" formControlName="codeSystemName">
                 <option value="">ALL</option>
-                <option *ngFor="let CODE_SYSTEM_NAME of CODE_SYSTEM_NAMES">{{CODE_SYSTEM_NAME}}</option>
+                <option
+                  *ngFor="let CODE_SYSTEM_NAME of constantService.CODE_SYSTEM_NAMES">{{CODE_SYSTEM_NAME}}</option>
               </select>
             </div>
           </th>
@@ -112,7 +113,8 @@
             <div class="flex flex-col m-2">
               <select id="requestStatusInput" class="w-20" formControlName="requestStatus">
                 <option value="">ALL</option>
-                <option *ngFor="let LOAD_REQUEST_STATUS of LOAD_REQUEST_STATUSES">{{LOAD_REQUEST_STATUS}}</option>
+                <option
+                  *ngFor="let LOAD_REQUEST_STATUS of constantService.LOAD_REQUEST_STATUSES">{{LOAD_REQUEST_STATUS}}</option>
               </select>
             </div>
           </th>
@@ -131,7 +133,8 @@
             <div class="flex flex-col m-2">
               <select id="requestTypeInput" class="w-20" formControlName="requestType">
                 <option value="">ALL</option>
-                <option *ngFor="let LOAD_REQUEST_TYPE of LOAD_REQUEST_TYPES">{{LOAD_REQUEST_TYPE}}</option>
+                <option
+                  *ngFor="let LOAD_REQUEST_TYPE of constantService.LOAD_REQUEST_TYPES">{{LOAD_REQUEST_TYPE}}</option>
               </select>
             </div>
           </th>
