--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -17,7 +17,8 @@
             <div class="flex flex-col m-2">
               <select id="codeSystemNameFilterInput" class="w-20" formControlName="codeSystemName">
                 <option value="">ALL</option>
-                <option *ngFor="let CODE_SYSTEM_NAME of CODE_SYSTEM_NAMES">{{CODE_SYSTEM_NAME}}</option>
+                <option
+                  *ngFor="let CODE_SYSTEM_NAME of constantService.CODE_SYSTEM_NAMES">{{CODE_SYSTEM_NAME}}</option>
               </select>
             </div>
           </th>
@@ -64,7 +65,7 @@
             <div class="flex flex-col m-2">
               <select id="versionStatusFilterInput" class="w-24" formControlName="versionStatus">
                 <option value="">ALL</option>
-                <option *ngFor="let status of VERSION_STATUSES">{{status}}</option>
+                <option *ngFor="let status of constantService.VERSION_STATUSES">{{status}}</option>
               </select>
             </div>
           </th>
