--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -3,7 +3,7 @@
     <!-- Key Column -->
     <ng-container matColumnDef="key">
       <th mat-header-cell *matHeaderCellDef>Key</th>
-      <td mat-cell *matCellDef="let element">{{element.label}}</td>
+      <td mat-cell *matCellDef="let element" class="text-end">{{element.label}}</td>
     </ng-container>
 
     <!-- Value Column -->
@@ -18,7 +18,12 @@
             {{element.value | date:'hh:mm:ss'}}
           </ng-container>
           <ng-container *ngSwitchDefault>
-            {{element.value}}
+            <ng-container *ngIf="isTime(element.key); else regularField">
+              {{element.value | date:'yyyy/MM/dd hh:mma'}}
+            </ng-container>
+            <ng-template #regularField>
+              {{element.value}}
+            </ng-template>
           </ng-container>
         </ng-container>
       </td>
