--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -143,7 +143,7 @@
         <ng-container matColumnDef="requestTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
-              <label for="requestRange" class="m-2" mat-sort-header disableClear>Request Time</label>
+              <label for="requestTimeRange" class="m-2" mat-sort-header disableClear>Request Time</label>
             </div>
           </th>
           <td mat-cell
@@ -152,7 +152,7 @@
         <ng-container matColumnDef="requestTime-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <mat-form-field appearance="outline" id="requestRange">
+              <mat-form-field appearance="outline" id="requestTimeRange">
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]="requestRangePicker">
                   <input matStartDate formControlName="requestTimeFrom" placeholder="Start date">
@@ -184,7 +184,7 @@
         <ng-container matColumnDef="creationTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
-              <label for="creationTimeFrom" class="m-2" mat-sort-header disableClear>Creation Time</label>
+              <label for="creationTimeRange" class="m-2" mat-sort-header disableClear>Creation Time</label>
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.creationTime | date:'yyyy/MM/dd hh:mma':'GMT+05:00'}}</td>
@@ -192,10 +192,15 @@
         <ng-container matColumnDef="creationTime-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <input id="creationTimeFrom" matInput class="w-30" formControlName="creationTimeFrom" type="date"
-                     [max]="searchCriteria.get('creationTimeTo')?.getRawValue()">
-              <input id="creationTimeTo" matInput class="w-30" formControlName="creationTimeTo" type="date"
-                     [min]="searchCriteria.get('creationTimeFrom')?.getRawValue()">
+              <mat-form-field appearance="outline" id="creationTimeRange">
+                <mat-label>Enter a date range</mat-label>
+                <mat-date-range-input [rangePicker]="createRangePicker">
+                  <input matStartDate formControlName="creationTimeFrom" placeholder="Start date">
+                  <input matEndDate formControlName="creationTimeTo" placeholder="End date">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matIconSuffix [for]="createRangePicker"></mat-datepicker-toggle>
+                <mat-date-range-picker #createRangePicker></mat-date-range-picker>
+              </mat-form-field>
             </div>
           </th>
         </ng-container>
