--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -151,7 +151,7 @@
         </ng-container>
         <ng-container matColumnDef="requestTime-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col m-2">
+            <div class="mt-2">
               <mat-form-field appearance="outline" id="requestTimeRange">
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]="requestRangePicker">
@@ -191,7 +191,7 @@
         </ng-container>
         <ng-container matColumnDef="creationTime-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col m-2">
+            <div class="mt-2">
               <mat-form-field appearance="outline" id="creationTimeRange">
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]="createRangePicker">
