--- a/projects/ts-etl-ui/src/load-summary/load-summary.component.html
+++ b/projects/ts-etl-ui/src/load-summary/load-summary.component.html
@@ -12,7 +12,7 @@
     </ng-container>
     <ng-container matColumnDef="startTime">
       <th mat-header-cell *matHeaderCellDef disableClear>Start Time</th>
-      <td mat-cell *matCellDef="let element">{{element.startTime}}</td>
+      <td mat-cell *matCellDef="let element">{{element.startTime | easternTime}}</td>
     </ng-container>
     <ng-container matColumnDef="duration">
       <th mat-header-cell *matHeaderCellDef disableClear>Duration</th>
