--- a/projects/ts-etl-ui/src/load-version-activity/load-version-activity.component.html
+++ b/projects/ts-etl-ui/src/load-version-activity/load-version-activity.component.html
@@ -11,7 +11,7 @@
            multiTemplateDataRows>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Activity ID</th>
-        <td mat-cell *matCellDef="let element"> {{element.id | date: 'YYYY-MM-dd'}}</td>
+        <td mat-cell *matCellDef="let element"> {{element.id | easternTime: 'YYYY-MM-dd z'}}</td>
       </ng-container>
 
       <ng-container matColumnDef="activity">
@@ -42,7 +42,7 @@
           </ng-container>
           <ng-template #noEdit>
             <span style="vertical-align: super">
-              {{element.availableDate | date:'yyyy/MM/dd'}}
+              {{element.availableDate | easternTime:'yyyy/MM/dd z'}}
             </span>
             <button mat-icon-button color="primary"
                     *ngIf="loadVersion().loadVersionActivities[0].activity === 'Accept' && index === 0"
