--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -75,7 +75,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
             Load Start Time
           </th>
-          <td mat-cell *matCellDef="let row">{{row.loadStartTime | date:'yyyy/MM/dd hh:mma':'GMT+05:00'}}</td>
+          <td mat-cell *matCellDef="let row">{{row.loadStartTime | easternTime}}</td>
         </ng-container>
         <ng-container matColumnDef="loadStartTime-search">
           <th mat-header-cell *matHeaderCellDef>
@@ -122,7 +122,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
             Request Time
           </th>
-          <td mat-cell *matCellDef="let row">{{row.requestTime | date:'yyyy/MM/dd hh:mma':'GMT+05:00'}}</td>
+          <td mat-cell *matCellDef="let row">{{row.requestTime | easternTime}}</td>
         </ng-container>
         <ng-container matColumnDef="requestTime-search">
           <th mat-header-cell *matHeaderCellDef>
