--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -186,7 +186,7 @@
               <label for="creationTimeRange" class="m-2" mat-sort-header disableClear>Creation Time</label>
             </div>
           </th>
-          <td mat-cell *matCellDef="let row">{{row.creationTime | easternTime}} EST</td>
+          <td mat-cell *matCellDef="let row">{{row.creationTime | easternTime}}</td>
         </ng-container>
         <ng-container matColumnDef="creationTime-search">
           <th mat-header-cell *matHeaderCellDef>
