--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -75,11 +75,14 @@
         <ng-container matColumnDef="codeSystemName-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <select id="codeSystemSearch" class="w-20" formControlName="codeSystemName">
-                <option value="">ALL</option>
-                <option
-                  *ngFor="let CODE_SYSTEM_NAME of constantService.CODE_SYSTEM_NAMES">{{CODE_SYSTEM_NAME}}</option>
-              </select>
+              <mat-form-field>
+                <mat-label>Code System Name</mat-label>
+                <mat-select id="codeSystemSearch" formControlName="codeSystemName" multiple>
+                  <ng-container *ngFor="let CODE_SYSTEM_NAME of constantService.CODE_SYSTEM_NAMES">
+                    <mat-option [value]="CODE_SYSTEM_NAME">{{CODE_SYSTEM_NAME}}</mat-option>
+                  </ng-container>
+                </mat-select>
+              </mat-form-field>
             </div>
           </th>
         </ng-container>
