--- a/projects/ts-etl-ui/src/load-request/load-request.component.scss
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.scss
@@ -1,4 +1,4 @@
-#requestTimeRange, #creationTimeRange {
+#requestTimeRange, #creationTimeRange, #codeSystemSearch {
   .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
     height: 0.5rem;
   }
