--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -53,7 +53,9 @@
               <label for="opRequestSeqFilterInput" class="m-2" mat-sort-header disableClear>Request ID</label>
             </div>
           </th>
-          <td mat-cell *matCellDef="let row">{{row.opRequestSeq}}</td>
+          <td mat-cell *matCellDef="let row">
+            <a [routerLink]="['/load-request', row.opRequestSeq]">{{row.opRequestSeq}}</a>
+          </td>
         </ng-container>
         <ng-container matColumnDef="opRequestSeq-search">
           <th mat-header-cell *matHeaderCellDef>
@@ -207,41 +209,12 @@
           </th>
         </ng-container>
 
-        <ng-container matColumnDef="expandedDetail">
-          <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand().length">
-            <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
-              <div class="example-element-description" *ngIf="expandedElement === row">
-                <fieldset>
-                  <legend>Load Request</legend>
-                  <ng-container *ngIf="row.requestStatus === 'Open' && user?.utsUser!.username === row.requester">
-                    <button mat-fab extended (click)="openEditDialog(row)">
-                      Edit
-                    </button>
-                    <button mat-fab extended (click)="openCancelDialog(row.opRequestSeq)">
-                      Cancel
-                    </button>
-                  </ng-container>
-                  <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
-                  <app-load-request-activity [requestId]="row.opRequestSeq"
-                                             [loadRequestActivities]="row.loadComponents"></app-load-request-activity>
-                  <app-load-request-message
-                    [loadRequestActivities]="row.loadComponents"></app-load-request-message>
-                </fieldset>
-              </div>
-            </div>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand()"></tr>
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay()"></tr>
         <tr mat-header-row *matHeaderRowDef="searchRowColumns"></tr>
 
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplayWithExpand();"
-            class="example-element-row"
-            [class.example-expanded-row]="expandedElement === row"
-            (click)="expandRow(row)">
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay();"
+            class="example-element-row">
         </tr>
-
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="9">
