--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -42,7 +42,7 @@
 
   <div class="mat-elevation-z8 ">
     <div class="example-table-container">
-      <table mat-table [dataSource]="data()" class="example-table" multiTemplateDataRows
+      <table mat-table [dataSource]="data()" class="example-table"
              matSort [matSortActive]="currentLoadRequestSearchCriteria.sortCriteria.sortBy" matSortDisableClear
              [matSortDirection]="currentLoadRequestSearchCriteria.sortCriteria.sortDirection"
              (matSortChange)="handleSortEvent($event)">
