--- a/projects/ts-etl-ui/src/load-version/load-version.component.html
+++ b/projects/ts-etl-ui/src/load-version/load-version.component.html
@@ -91,7 +91,7 @@
         <ng-container matColumnDef="requestId">
           <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Request ID</th>
           <td mat-cell *matCellDef="let row">
-            <a routerLink="/load-requests" [queryParams]="{requestId:row.requestId,expand:0}">{{row.requestId}} </a>
+            <a [routerLink]="['/load-request', row.requestId]">{{row.requestId}}</a>
           </td>
         </ng-container>
         <ng-container matColumnDef="requestId-search">
