--- a/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
+++ b/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="duration">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration</th>
-      <td mat-cell *matCellDef="let element"> {{duration(element) | date: 'hh:mm:ss'}} </td>
+      <td mat-cell *matCellDef="let element"> {{duration(element) | easternTime: 'hh:mm:ss'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
@@ -28,12 +28,14 @@
 
     <ng-container matColumnDef="nbOfMessages">
       <th mat-header-cell *matHeaderCellDef mat-sort-header># of Messages</th>
-      <td mat-cell *matCellDef="let element"> {{element.infos.length + element.warnings.length + element.errors.length}} </td>
+      <td mat-cell
+          *matCellDef="let element"> {{element.infos.length + element.warnings.length + element.errors.length}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of activities" [showFirstLastButtons]="true"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of activities"
+                 [showFirstLastButtons]="true"></mat-paginator>
 </fieldset>
