--- a/projects/ts-etl-ui/src/load-version-activity/load-version-activity.component.html
+++ b/projects/ts-etl-ui/src/load-version-activity/load-version-activity.component.html
@@ -11,7 +11,7 @@
            multiTemplateDataRows>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Activity ID</th>
-        <td mat-cell *matCellDef="let element"> {{element.id | easternTime}}</td>
+        <td mat-cell *matCellDef="let element"> {{element.id | easternTime:'yyyy-MM-dd z'}}</td>
       </ng-container>
 
       <ng-container matColumnDef="activity">
