363 show all dates as yyyy mm dd instead of momentjs default (#372)
* show all date as yyyy mm dd instead of moment js default

* fix

* done

* fix empty date string

* fix all date pipe

---------

Co-authored-by: ludetc <ludetc@gmail.com>

--- a/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
+++ b/projects/ts-etl-ui/src/load-version-note/load-version-note.component.html
@@ -4,7 +4,7 @@
     <table class="mat-elevation-z8 my-3" mat-table [dataSource]="dataSource()" matSort>
       <ng-container matColumnDef="activityId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Activity ID</th>
-        <td mat-cell *matCellDef="let activity">{{activity.activityId | easternTime: 'YYYY-MM-dd z'}}</td>
+        <td mat-cell *matCellDef="let activity">{{activity.activityId | easternTime:'yyyy-MM-dd z'}}</td>
       </ng-container>
       <ng-container matColumnDef="activityId-search">
         <th mat-header-cell *matHeaderCellDef>
