--- a/projects/ts-etl-ui/src/load-version-detail/load-version-detail.component.html
+++ b/projects/ts-etl-ui/src/load-version-detail/load-version-detail.component.html
@@ -8,7 +8,7 @@
     <th mat-header-cell *matHeaderCellDef>Value</th>
     <td mat-cell *matCellDef="let element">
       <ng-container *ngIf="element.type === 'date'; else defaultCell">
-        {{element.value | easternTime:'YYYY/MM/dd z'}}
+        {{element.value | easternTime:'yyyy-MM-dd z'}}
       </ng-container>
       <ng-template #defaultCell>
         {{element.value}}
